# bp-getting-acquainted-with-lens

./: .gitignore  .stylish-haskell.yaml  LICENSE  README.md  bp-getting-acquainted-with-lens.cabal  default.nix  shell.nix
chapters/: 0_Introduction.md  1_DuplicatedRecordFields.md  2_OverloadedLabels.md  3_OverloadedLabels2.md  4_OverloadedLabels3.md  5_OverloadedLabels4.md  6_Setting.md  7_Part2_Begins.md
src/EncodePanda/: Lens.hs  Lens2.hs  Lens3.hs  OverloadedLabels.hs
